[gd_scene load_steps=14 format=3 uid="uid://dve7ju37uf7li"]

[ext_resource type="Script" path="res://assets/scripts/GameManager.gd" id="1_mkis0"]
[ext_resource type="PackedScene" uid="uid://80baen2a2jlw" path="res://assets/prefabs/Player.tscn" id="3_vtsus"]
[ext_resource type="AudioStream" uid="uid://djq8762qg4vsq" path="res://assets/sound/Background Theme.mp3" id="4_gsbw5"]
[ext_resource type="Script" path="res://assets/scripts/BackgroundMusic.gd" id="4_td18p"]
[ext_resource type="Texture2D" uid="uid://b63nlvdbf577w" path="res://assets/crowd.png" id="5_jvyg4"]
[ext_resource type="LabelSettings" uid="uid://cqxuyqi8wnm8m" path="res://assets/label.tres" id="5_nwr88"]
[ext_resource type="Texture2D" uid="uid://rfkxpunut1x4" path="res://assets/input prompts/keyboard_z.svg" id="7_15ut4"]
[ext_resource type="Texture2D" uid="uid://d0d7o2627hreh" path="res://assets/input prompts/keyboard_x.svg" id="8_dexpt"]
[ext_resource type="PackedScene" uid="uid://tb4iilejyldl" path="res://assets/death_screen.tscn" id="9_oybah"]

[sub_resource type="QuadMesh" id="QuadMesh_soshn"]

[sub_resource type="Gradient" id="Gradient_kxh2y"]
colors = PackedColorArray(0.813255, 0.578957, 0.335423, 1, 0.811765, 0.580392, 0.337255, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x6ft0"]
gradient = SubResource("Gradient_kxh2y")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4e0jd"]
size = Vector2(1155, 175)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mkis0")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("3_vtsus")]
z_index = 1
position = Vector2(-500, 80)

[node name="Preloaded Obstacles" type="Node2D" parent="."]
position = Vector2(0, -35)

[node name="Obstacles" type="Node2D" parent="."]
position = Vector2(0, -35)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(500, -35)
scale = Vector2(2, 1)
collision_mask = 0

[node name="Floor" type="MeshInstance2D" parent="Ground"]
position = Vector2(-250, 235)
scale = Vector2(576, 176)
mesh = SubResource("QuadMesh_soshn")
texture = SubResource("GradientTexture1D_x6ft0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(0.5, 235.75)
shape = SubResource("RectangleShape2D_4e0jd")

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_gsbw5")
volume_db = -8.0
autoplay = true
script = ExtResource("4_td18p")

[node name="Crowd" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
position = Vector2(0, 124.88)
scale = Vector2(0.302, 0.299)
texture = ExtResource("5_jvyg4")

[node name="Particules" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -572.0
offset_top = -320.0
offset_right = -532.0
offset_bottom = -280.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TimeBox" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 512.0
offset_top = 3.0
offset_right = 592.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="Label" type="Label" parent="UI/TimeBox"]
layout_mode = 2
text = "TEMPS"
label_settings = ExtResource("5_nwr88")

[node name="Time" type="Label" parent="UI/TimeBox"]
layout_mode = 2
label_settings = ExtResource("5_nwr88")

[node name="ScoreBox" type="VBoxContainer" parent="UI"]
layout_mode = 1
offset_left = 1024.0
offset_top = 4.0
offset_right = 1139.0
offset_bottom = 121.0

[node name="Label" type="Label" parent="UI/ScoreBox"]
layout_mode = 2
text = "SCORE"
label_settings = ExtResource("5_nwr88")
horizontal_alignment = 2

[node name="Score" type="Label" parent="UI/ScoreBox"]
layout_mode = 2
label_settings = ExtResource("5_nwr88")
horizontal_alignment = 2

[node name="GoldBox" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.0
offset_top = 3.0
offset_right = 42.0
offset_bottom = 53.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Label" type="Label" parent="UI/GoldBox"]
layout_mode = 2
text = "OR"
label_settings = ExtResource("5_nwr88")

[node name="Gold" type="Label" parent="UI/GoldBox"]
layout_mode = 2
label_settings = ExtResource("5_nwr88")

[node name="InputPrompts" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 12.0
offset_top = 584.0
offset_right = 52.0
offset_bottom = 624.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/InputPrompts"]
modulate = Color(0.643137, 0.643137, 0.643137, 1)
layout_mode = 0
offset_left = 33.0
offset_top = -30.0
offset_right = 231.0
offset_bottom = 10.0

[node name="Label" type="Label" parent="UI/InputPrompts/HBoxContainer"]
layout_mode = 2
text = "SAUTER"
label_settings = ExtResource("5_nwr88")

[node name="KeyboardZ" type="Sprite2D" parent="UI/InputPrompts/HBoxContainer"]
position = Vector2(-21, 19)
scale = Vector2(0.65625, 0.65625)
texture = ExtResource("7_15ut4")

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/InputPrompts"]
modulate = Color(0.643137, 0.643137, 0.643137, 1)
layout_mode = 0
offset_left = 32.0
offset_top = 12.0
offset_right = 128.0
offset_bottom = 52.0

[node name="Label" type="Label" parent="UI/InputPrompts/HBoxContainer2"]
layout_mode = 2
text = "SAUTER"
label_settings = ExtResource("5_nwr88")

[node name="KeyboardX" type="Sprite2D" parent="UI/InputPrompts/HBoxContainer2"]
position = Vector2(-20, 21)
scale = Vector2(0.65625, 0.65625)
texture = ExtResource("8_dexpt")

[node name="Jump1" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 295.0
offset_right = 219.0
offset_bottom = 322.0
grow_vertical = 2
rotation = -1.5708
show_percentage = false

[node name="Jump2" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 295.0
offset_right = 234.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
show_percentage = false

[node name="DeathScreen" parent="." instance=ExtResource("9_oybah")]

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="finished" from="BackgroundMusic" to="BackgroundMusic" method="restart_background_music"]
